# CoronaEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TaskSplitting.md  implementation.md
modules/corona_resource/tests/: CMakeLists.txt  test_animation_pose.cpp  test_resource_manager.cpp
src/systems/optics/: CMakeLists.txt  hardware.h  optics_system.cpp
src/systems/optics/tests/: test_vision_geometry_gpu_resource.cpp  test_vision_pipeline_key.cpp  test_vision_scene_resource.cpp
src/systems/optics/vision/: vision_camera_adapter.cpp  vision_coordinate_adapter.h  vision_geometry_adapter.cpp  vision_geometry_adapter.h  vision_light_adapter.cpp  vision_material_adapter.cpp  vision_output_bridge.cpp  vision_zero_copy_bridge.cpp  vision_zero_copy_bridge.h
vision/: .gitmodules  CMakeLists.txt
vision/src/: CMakeLists.txt
vision/src/GUI/: decl.h  widgets.h
vision/src/UI/: GUI.h  polymorphic.h
vision/src/apps/: CMakeLists.txt
vision/src/apps/material_viewer/: CMakeLists.txt  main.cpp  material_viewer_app.cpp  material_viewer_app.h  material_viewer_gl.cpp  material_viewer_gl.h  material_viewer_plot.cpp  material_viewer_plot.h  material_viewer_shared.h
vision/src/apps/precompute/: main.cpp
vision/src/apps/sampler_viewer/: CMakeLists.txt  main.cpp  sampler_viewer_app.cpp  sampler_viewer_app.h
vision/src/apps/vision-eval/: CMakeLists.txt  main.cpp
vision/src/apps/vision-gui/: CMakeLists.txt  application.cpp  application.h  main.cpp
vision/src/base/: CMakeLists.txt  bake_utils.cpp  bake_utlis.h  cli_parser.cpp  cli_parser.h  denoiser.h  encoded_object.h  macro.h  node.cpp  node.h  sampler.h  shape.cpp  shape.h  using.h  warper.h
vision/src/base/color/: cie.h  spd.cpp  spd.h  spectrum.cpp  spectrum.h
vision/src/base/illumination/: ies.cpp  ies.h  light.cpp  light.h  lightsampler.cpp  lightsampler.h
vision/src/base/import/: importer.h  json_util.h  medium_scatter_data.h  node_desc.cpp  node_desc.h  param_schema.cpp  param_schema.h  parameter_set.h  project_desc.cpp  project_desc.h
vision/src/base/integral/: integrator.cpp  integrator.h  radiance_cache.h
vision/src/base/mgr/: geometry.cpp  geometry.h  global.cpp  global.h  image_pool.cpp  image_pool.h  interactive_runtime_switches.h  pipeline.cpp  pipeline.h  pipeline_ui.cpp  pipeline_ui.h  postprocessor.cpp  postprocessor.h  registries.cpp  registries.h  renderer.cpp  renderer.h  scene.cpp  scene.h
vision/src/base/scattering/: bxdf.cpp  bxdf.h  fresnel.h  interaction.h  lobe.cpp  lobe.h  material.cpp  material.h  medium.cpp  medium.h  microfacet.cpp  microfacet.h  precomputed_table.h  sample.h
vision/src/base/sensor/: filter.cpp  filter.h  frame_buffer.cpp  frame_buffer.h  light_field_types.h  photosensory.cpp  photosensory.h  sensor.cpp  sensor.h  tonemapper.h  upsampler.h  visualizer.cpp  visualizer.h
vision/src/base/shader_graph/: shader_graph.cpp  shader_graph.h  shader_node.cpp  shader_node.h
vision/src/ext/: CMakeLists.txt
vision/src/ext/window/: CMakeLists.txt
vision/src/hotfix/: CMakeLists.txt  build_rules.cpp  build_rules.h  build_system.cpp  build_system.h  cmd_process.cpp  cmd_process.h  compiler.cpp  compiler.h  export.h  file_tool.cpp  file_tool.h  hotfix.cpp  hotfix.h  macro.h  module_interface.cpp  module_interface.h  object.h  support.h
vision/src/hotfix/compiles/: CMakeLists.txt  llvm.cpp  msvc.cpp
vision/src/hotfix/rules_parsers/: CMakeLists.txt  json.cpp  ninja.cpp
vision/src/hotfix/test/: CMakeLists.txt  demo.cpp  demo.h  hotfix_test.cpp  hotfix_test.h  test.cpp  test.h
vision/src/importers/: assimp_parser.cpp
vision/src/importers/assimp/: importer.cpp
vision/src/importers/json/: importer.cpp
vision/src/math/: complex.h  optics.h  util.h  warp.h
vision/src/pipelines/bake/: baker.cpp  baker.h  batch_mesh.cpp  batch_mesh.h  dilate_filter.h  pipeline.cpp  pipeline.h
vision/src/pipelines/customized/: pipeline.cpp
vision/src/pipelines/fixed/: pipeline.cpp
vision/src/render_core/denoiser/: CMakeLists.txt  oidn.cpp  optix.cpp
vision/src/render_core/filter/: fitted_curve.h  gaussian.cpp  mitchell.cpp  sinc.cpp
vision/src/render_core/framebuffer/: light_field.cpp
vision/src/render_core/integrator/: pt.cpp  rt.cpp
vision/src/render_core/light/: area.cpp  point.cpp  projector.cpp  spot.cpp
vision/src/render_core/lightsampler/: power.cpp
vision/src/render_core/material/: add.cpp  black_body.cpp  diffuse.cpp  (+13 more)
vision/src/render_graph/: graph.cpp  graph.h  pass.h  resource.h
vision/src/sdk/: CMakeLists.txt  render_service.cpp  render_service.h  vision.cpp  vision.h
vision/src/tests/: CMakeLists.txt  test_hotfix.cpp  test_material_energy.cpp  test_material_reset.cpp  test_param_schema.cpp  test_playground.cpp  test_project_desc_schema.cpp  test_shader_graph_lifecycle.cpp  test_thin_lens.cpp  test_warper2d.cpp
vision/src/window/: CMakeLists.txt  window.cpp  window.h
vision/tools/: ablation_study.py  auto_iterate.py  auto_tune.py  build_clion_target.ps1  build_standalone.cmd  check_async_step.ps1  check_msvc_build.ps1  clean_golden.bat  compile_tu.ps1  dev_verify.bat  dev_verify_all.bat  format_check.bat  generate_golden.bat  invoke_msvc_build.ps1  lightfield_eval.py  normal_svgf_eval.py  regression_test.bat  regression_test_low.bat  run_all_ocarina_tests.bat  run_all_release_tests.bat  run_tests.bat  run_with_timeout.ps1  scene_targets.json  start_cmake_config.ps1  start_msvc_build.ps1  stats_line_num.py  tmp_build_all.bat  trajectory_eval.py  validate_importer.py  watch_async_step.ps1
vision/tools/b2v/: __init__.py  blender_manifest.toml  utils.py
vision/tools/dev_verify/: dev_verify.py  format_check.py  generate_golden.py  regression_compare.py  regression_render.py  run_tests.py
vision/tools/scene_params/: spaceship_desktop4k_quality.json  sweep_spaceship_desktop4k_quality.tsv
vision/tools/scene_transform/: __init__.py  canonicalize_scene.py  common.py  inspect.py  run_all.bat  run_all.py  transform_emissions.py  transform_lights.py  transform_materials.py
vision/tools/trajectories/: combined.json  look_up.json  translate_forward.json
(+637 files in other folders)
